// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render range 1`] = `
<Dropdown
  approxContentHeight={320}
  approxContentWidth={240}
  auto={true}
  className="input-date"
  isOpen={false}
  onBlur={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  trigger={
    <InputDateValue
      active={null}
      format="yyyy-MM-dd"
      onChange={[Function]}
      onRangeFocus={[Function]}
      range={true}
      value={Object {}}
    />
  }
  useClickAway={true}
>
  <div
    className="wrapper"
  >
    <InputDatePicker
      active={null}
      disabled={false}
      disabledDates={Array []}
      disabledRanges={Array []}
      monthsToDisplay={2}
      onChange={[Function]}
      onOpenToDateChange={[Function]}
      openToDate={null}
      presets={true}
      range={true}
    />
  </div>
</Dropdown>
`;

exports[`render simple 1`] = `
<Dropdown
  approxContentHeight={320}
  approxContentWidth={240}
  auto={true}
  className="input-date"
  isOpen={false}
  onBlur={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  trigger={
    <InputDateValue
      active={null}
      format="yyyy-MM-dd"
      onChange={[Function]}
      onRangeFocus={[Function]}
      range={false}
      value=""
    />
  }
  useClickAway={true}
>
  <div
    className="wrapper"
  >
    <InputDatePicker
      active={null}
      disabled={false}
      disabledDates={Array []}
      disabledRanges={Array []}
      monthsToDisplay={1}
      onChange={[Function]}
      onOpenToDateChange={[Function]}
      openToDate={null}
      presets={Array []}
      range={false}
    />
  </div>
</Dropdown>
`;
